--- a/templates/deleteStyle.html
+++ b/templates/deleteStyle.html
@@ -9,6 +9,7 @@
 <form action="#" method = 'post'>
 
     <button type="submit" class="btn btn-default delete" id="submit" type="submit">
+    <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
     <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete</button>
 
 
