--- a/templates/editModel.html
+++ b/templates/editModel.html
@@ -10,6 +10,8 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-1 padding-top">
             <form action="{{ url_for('editModel', style_id = style.id, model_id = model.id)}}" method = "post">
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
+                
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon">Name</span>
