--- a/templates/editStyle.html
+++ b/templates/editStyle.html
@@ -13,6 +13,8 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-1 padding-top">
             <form action="{{ url_for('editStyle',style_id = style.id)}}" method = "post">
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
+                
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type ="text" class="form-control" name="name" value="{{style.name }}">
