--- a/templates/newModel.html
+++ b/templates/newModel.html
@@ -13,6 +13,7 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-1 padding-top">
             <form action="#" method = "post">
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type ="text" maxlength="50" class="form-control" name="name"placeholder="Name of the Model">
